join replicate stats to assay results clean up replicate stats on run delete